# dnstest

./: .travis.yml  README.md  example-config.yml  pyproject.toml  tox.ini
dnstest/: check.py  cli.py  matches.py  validator.py
tests/: test_test.py
